--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/main.css" >
 
     <!-- font -->
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <!-- animation-link -->
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -20,16 +20,16 @@
 <body data-bs-spy="scroll" data-bs-target=".navbar">
   <!-- NAVBAR -->
   <header class="sticky-top">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary ">
+    <nav class="navbar navbar-expand-lg  nav-bg">
       <div class="container">
         <a class="navbar-brand" href="#">
-          <img src="./assets/Img/logo1.png" alt="logo"/>
+          <img src="./assets/Img/logo1-white.png" alt="logo" style="width: 200px;"/>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse " id="navbarNav">
-          <ul class="navbar-nav ms-auto">
+          <ul class="navbar-nav ms-auto gap-3">
             <li class="nav-item">
               <a class="nav-link " aria-current="page" href="#home">Home</a>
             </li>
@@ -43,9 +43,6 @@
               <a class="nav-link " aria-current="page" href="#faq">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="#team">Team</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link " aria-current="page" href="#contact">Contact</a>
             </li>
           </ul>
@@ -55,7 +52,7 @@
   </header>
   
   <!-- HERO-MAIN -->
-  <section id="hero-section">
+  <section id="home">
     <div class="container-fluid px-0">
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
@@ -64,25 +61,28 @@
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img  src="https://images.pexels.com/photos/123335/pexels-photo-123335.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100 car-img" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="display-4  text-white fw-bold">Enriched IT solutions</h5>
-              <p class="display-6 ">Make your business foundation stronger with our expert IT team.</p>
+          <div class="carousel-item active carousel-txt">
+            <div class="overlap-color"></div>
+            <img  src="https://images.pexels.com/photos/2599244/pexels-photo-2599244.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100 car-img" alt="...">
+            <div class="carousel-caption d-md-block">
+              <h5 class="display-5  text-white fw-bold">Enriched IT solutions</h5>
+              <p class="display-7 ">Make your business foundation stronger with our expert IT team.</p>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="https://images.pexels.com/photos/2653362/pexels-photo-2653362.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100 car-img" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="display-4 text-white fw-bold">Double your ROI</h5>
-              <p class="display-6 ">Bring strong impressions on Digital Platform to grab your customers.</p>
+          <div class="carousel-item carousel-txt">
+            <div class="overlap-color"></div>
+            <img src="https://images.pexels.com/photos/1181317/pexels-photo-1181317.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100 car-img" alt="...">
+            <div class="carousel-caption  d-md-block">
+              <h5 class="display-5 text-white fw-bold">Double your ROI</h5>
+              <p class="display-7 ">Bring strong impressions on Digital Platform to grab your customers.</p>
             </div>
           </div>
-          <div class="carousel-item">
-            <img src="https://images.pexels.com/photos/2249964/pexels-photo-2249964.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100 car-img" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="display-4 text-white fw-bold">Drive increased productivity</h5>
-              <p class="display-6 ">Simplified solutions with latest trending technologies in demand.</p>
+          <div class="carousel-item carousel-txt">
+            <div class="overlap-color"></div>
+            <img src="https://images.pexels.com/photos/459653/pexels-photo-459653.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100 car-img" alt="...">
+            <div class="carousel-caption  d-md-block">
+              <h5 class="display-5 text-white fw-bold">Drive increased productivity</h5>
+              <p class="display-7 ">Simplified solutions with latest trending technologies in demand.</p>
             </div>
           </div>
         </div>
@@ -106,13 +106,13 @@
           <div class="section-title">
             <h1 class="fw-semibold display-4">About us</h1>
             <div class="line"></div>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
+            <p>It is a long established fact that a reader will be distracted by the readable content of  page when looking at its layout. </p>
           </div>
         </div>
       </div>
       <div class="row justify-content-between align-items-center">
         <div class="col-lg-6" data-aos="fade-down" data-aos-delay="50">
-          <img class="w-100 about-photo" src="https://images.pexels.com/photos/3184433/pexels-photo-3184433.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+          <img class="w-100 about-photo" src="./assets/Img/team-profile.jpeg" alt="">
         </div>
         <div class="col-lg-5" data-aos="fade-left" data-aos-delay="50">
           <h1 class="mt-5 mt-lg-0 text-center text-lg-start text-md-start">Tech Dynamics</h1>
@@ -155,9 +155,9 @@
       <div class="row">
         <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
           <div class="section-title">
-            <h1 class="fw-semibold display-4">Our Services</h1>
+            <h1 class="fw-semibold display-4 ">Our Services</h1>
             <div class="line"></div>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
+            <p class="">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
           </div>
         </div>
       </div>
@@ -220,56 +220,110 @@
     </div>
   </section>
 
-  <!-- TEAM -->
-  <section id="team" class="section-padding">
+  <!-- FAQ -->
+  <section id="faq" class="section-padding">
     <div class="container">
       <div class="row">
         <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
           <div class="section-title">
-            <h1 class="fw-semibold display-4">Team Members</h1>
+            <h1 class="fw-semibold display-4">FAQ</h1>
             <div class="line"></div>
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
           </div>
         </div>
       </div>
-      <div class="row text-center" data-aos="fade-down" data-aos-delay="150">
-        <div class="col-md-4 mt-3 mt-lg-0">
-          <div class="team-member image-zoom">
-              <div class="image-zoom-wrapper">
-                <img class="team-image" src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+      <div class="faq-box">
+        <div class="row align-items-center">
+          <div class="col-md-12 my-2">
+            <div class="d-flex gap-3 text-center align-items-center justify-content-between">
+              <h4 class="text-start text-primary fs-3 fw-light">Can I get a free trial before I purchase?</h4>
+              <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
+                <i class="ri-arrow-down-s-line "></i>
+              </a>
+            </div>
+            <div class="row pt-3">
+              <div class="col">
+                <div class="collapse multi-collapse" id="multiCollapseExample1">
+                  <div class="card card-body ">
+                   <p class="fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                  </div>
+                </div>
               </div>
-              <div class="team-member-content">
-                <h4 class="text-white">Johan Doe</h4>
-                <p class="mb-0 text-white">UI Developer</p>
-              </div>
+            </div>
           </div>
-        </div>
-        <div class="col-md-4 mt-3 mt-lg-0">
-          <div class="team-member image-zoom">
-              <div class="image-zoom-wrapper">
-                <img class="team-image" src="https://images.pexels.com/photos/774909/pexels-photo-774909.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+          <div class="col-md-12 my-2">
+            <div class="d-flex text-center align-items-center justify-content-between">
+              <h4 class="text-start text-primary fs-3 fw-light">Will membership plans be charged automatically?</h4>
+              <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#multiCollapseExample2" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
+                <i class="ri-arrow-down-s-line "></i>
+              </a>
+            </div>
+            <div class="row pt-3">
+              <div class="col">
+                <div class="collapse multi-collapse" id="multiCollapseExample2">
+                  <div class="card card-body ">
+                   <p class="fs-5"> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                  </div>
+                </div>
               </div>
-              <div class="team-member-content">
-                <h4 class="text-white">Johan Doe</h4>
-                <p class="mb-0 text-white">UI Developer</p>
-              </div>
+            </div>
           </div>
-        </div>
-        <div class="col-md-4 mt-3 mt-lg-0">
-          <div class="team-member image-zoom">
-              <div class="image-zoom-wrapper">
-                <img class="team-image" src="https://images.pexels.com/photos/3775087/pexels-photo-3775087.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+          <div class="col-md-12 my-2">
+            <div class="d-flex gap-3 text-center align-items-center justify-content-between">
+              <h4 class="text-start text-primary fs-3 fw-light">what is a product key</h4>
+              <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#multiCollapseExample3" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
+                <i class="ri-arrow-down-s-line "></i>
+              </a>
+            </div>
+            <div class="row pt-3">
+              <div class="col">
+                <div class="collapse multi-collapse" id="multiCollapseExample3">
+                  <div class="card card-body ">
+                   <p class="fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
+                  </div>
+                </div>
               </div>
-              <div class="team-member-content">
-                <h4 class="text-white">Johan Doe</h4>
-                <p class="mb-0 text-white">UI Developer</p>
+            </div>
+          </div>
+          <div class="col-md-12 my-2">
+            <div class="d-flex text-center align-items-center justify-content-between">
+              <h4 class="text-start text-primary fs-3 fw-light">How long does it take to download?</h4>
+              <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#multiCollapseExample4" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
+                <i class="ri-arrow-down-s-line "></i>
+              </a>
+            </div>
+            <div class="row pt-3">
+              <div class="col">
+                <div class="collapse multi-collapse" id="multiCollapseExample4">
+                  <div class="card card-body ">
+                   <p class="fs-5"> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                  </div>
+                </div>
               </div>
+            </div>
+          </div>
+          <div class="col-md-12 my-2">
+            <div class="d-flex text-center align-items-center justify-content-between">
+              <h4 class="text-start text-primary fs-3 fw-light">where do i download the file to</h4>
+              <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#multiCollapseExample5" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
+                <i class="ri-arrow-down-s-line "></i>
+              </a>
+            </div>
+            <div class="row pt-3">
+              <div class="col">
+                <div class="collapse multi-collapse" id="multiCollapseExample5">
+                  <div class="card card-body ">
+                   <p class="fs-5"> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
-
+ 
   <!-- CONTACT -->
   <section id="contact" class="section-padding contact-bg">
     <div class="container">
@@ -314,8 +368,8 @@
         <div class="container">
             <div class="row gy-5">
                 <div class="col-lg-6 col-sm-6">
-                    <div class="position-relative top-25">
-                      <a href="#"><img src="./assets/Img/logo1-white.png" alt=""></a>
+                    <div class="position-relative" >
+                      <a href="#"><img src="./assets/Img/logo1-white.png" alt="" style="width: 200px;"></a>
                       <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, hic!</p>
                     </div>
                     <div class="social-icons">
@@ -349,9 +403,9 @@
                     <h5 class="mb-0 text-white">CONTACT</h5>
                     <div class="line"></div>
                     <ul>
-                        <li>New York, NY 3300</li>
-                        <li>(414) 586 - 3017</li>
-                        <li>www.techdynamicsinfo.com</li>
+                        <li>4546 Padgett Pl, Glen Allen VA 23030</li>
+                        <li>804 998 0801</li>
+                        <li>hr@techdynamicsinfo.com</li>
                     </ul>
                 </div>
             </div>
