--- a/index.html
+++ b/index.html
@@ -106,24 +106,24 @@
           <div class="section-title">
             <h1 class="fw-semibold display-4">About us</h1>
             <div class="line"></div>
-            <p>It is a long established fact that a reader will be distracted by the readable content of  page when looking at its layout. </p>
+            <p>Tech Dynamics IT services, an innovative software technology, consulting and services provider that represents considerable authority in conveying IT solutions that have a constructive outcome on organizations. </p>
           </div>
         </div>
       </div>
       <div class="row justify-content-between align-items-center">
         <div class="col-lg-6" data-aos="fade-down" data-aos-delay="50">
-          <img class="w-100 about-photo" src="./assets/Img/team-profile.jpeg" alt="">
+          <img class="w-100 about-photo" src="../design/assets/Img/team-profile.jpeg" alt="">
         </div>
         <div class="col-lg-5" data-aos="fade-left" data-aos-delay="50">
           <h1 class="mt-5 mt-lg-0 text-center text-lg-start text-md-start">Tech Dynamics</h1>
-          <p class="mt-3 mb-4 text-center text-lg-start text-md-start">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          <p class="mt-3 mb-4 text-center text-lg-start text-md-start"> We not only focus on technology applications, but also we are aware of the business sway all through the undertaking to guarantee we form and tune the execution to remain lined up with key business targets consistently. </p>
             <div class="d-flex pt-5 mb-3">
               <div class="icon-box me-4">
                 <i class="ri-stack-fill"></i>
               </div>
               <div>
                 <h5>Reliable Staffing Solution</h5>
-                <p>Help organizations elevate their business and upgrade with the latest technology update. Extricate </p>
+                <p>We guide our customers to finalize the business requirements and confirm the exact value commitment for the project delivery time.</p>
               </div>
             </div>
             <div class="d-flex pt-5 mb-3">
@@ -132,7 +132,7 @@
               </div>
               <div>
                 <h5>Our Mission</h5>
-                <p>Help organizations elevate their business and upgrade with the latest technology update. Extricate </p>
+                <p>Help organizations elevate their business and upgrade with the latest technology update. </p>
               </div>
             </div>
             <div class="d-flex pt-5 mb-3">
@@ -141,7 +141,7 @@
               </div>
               <div>
                 <h5>Our Vision</h5>
-                <p>Help organizations elevate their business and upgrade with the latest technology update. Extricate </p>
+                <p>Our Vision is to lead the company successfully by migrating and stabilizing to new technology, in the market and standing ahead of the competitors.</p>
               </div>
             </div>
         </div>
@@ -157,7 +157,7 @@
           <div class="section-title">
             <h1 class="fw-semibold display-4 ">Our Services</h1>
             <div class="line"></div>
-            <p class="">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
+            <p class="">We focus on three ‘playing fields’ dedicated to the digitalization of key management areas at the core of businesses: Customer First, Intelligent Industry, and Enterprise Management.</p>
           </div>
         </div>
       </div>
@@ -167,8 +167,8 @@
             <div class="icon-box">
               <i class="ri-window-fill"></i>
             </div>
-            <h5 class="mt-4 mb-2">Web Application <br>Developement</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <h5 class="mt-4 mb-2">Web Application Developement</h5>
+            <p>Afford the best web application development service, with the latest up-to-date technologies that automate the workflow and improvise the experience at the user end. </p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
@@ -177,7 +177,7 @@
               <i class="ri-smartphone-line"></i>
             </div>
             <h5 class="mt-4 mb-2">Mobile Application Developement</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>Divine It Services offer a round trip of mobile application’s design, integration, and management services as a solution. </p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
@@ -186,7 +186,7 @@
               <i class="ri-cloud-fill"></i>
             </div>
             <h5 class="mt-4 mb-2">Cloud Technology & Services</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>Cloud refers to the large variety of most wanted services to companies and customers online.</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
@@ -195,7 +195,7 @@
               <i class="ri-bug-fill"></i>
             </div>
             <h5 class="mt-4 mb-2">Testing Services</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>We offer complete software testing and quality confirmation services for your desktop, web, portable, and cloud-based applications.</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
@@ -204,7 +204,7 @@
               <i class="ri-pie-chart-box-line"></i>
             </div>
             <h5 class="mt-4 mb-2">Data Science & Analytics</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>We use specialists with distinctive skill sets; we tend to be well versed in Topological Data Analysis and skills to utilize its Data decomposition to enhance the accuracy of ML models.</p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
@@ -213,7 +213,7 @@
               <i class="ri-secure-payment-fill"></i>
             </div>
             <h5 class="mt-4 mb-2">Cyber Secuirty Services</h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <p>Programs let you know where you are and how best to protect your organization. Regular analysis by our cyber security auditor spots the route map structured with a secured cyber security program.</p>
           </div>
         </div>
       </div>
@@ -226,9 +226,9 @@
       <div class="row">
         <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
           <div class="section-title">
-            <h1 class="fw-semibold display-4">FAQ</h1>
+            <h1 class="fw-semibold display-4">Tech Dynamics FAQ</h1>
             <div class="line"></div>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
+            <p>Review its performance and impact</p>
           </div>
         </div>
       </div>
@@ -270,7 +270,7 @@
           </div>
           <div class="col-md-12 my-2">
             <div class="d-flex gap-3 text-center align-items-center justify-content-between">
-              <h4 class="text-start text-primary fs-3 fw-light">what is a product key</h4>
+              <h4 class="text-start text-primary fs-3 fw-light">What Is a Product Key</h4>
               <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#multiCollapseExample3" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
                 <i class="ri-arrow-down-s-line "></i>
               </a>
@@ -287,7 +287,7 @@
           </div>
           <div class="col-md-12 my-2">
             <div class="d-flex text-center align-items-center justify-content-between">
-              <h4 class="text-start text-primary fs-3 fw-light">How long does it take to download?</h4>
+              <h4 class="text-start text-primary fs-3 fw-light">How long does It take to download?</h4>
               <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#multiCollapseExample4" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
                 <i class="ri-arrow-down-s-line "></i>
               </a>
@@ -304,7 +304,7 @@
           </div>
           <div class="col-md-12 my-2">
             <div class="d-flex text-center align-items-center justify-content-between">
-              <h4 class="text-start text-primary fs-3 fw-light">where do i download the file to</h4>
+              <h4 class="text-start text-primary fs-3 fw-light">Where do I download the file to</h4>
               <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#multiCollapseExample5" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
                 <i class="ri-arrow-down-s-line "></i>
               </a>
@@ -332,7 +332,7 @@
           <div class="section-title">
             <h1 class="fw-semibold  display-4">Get in touch</h1>
             <div class="line"></div>
-            <p >It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. </p>
+            <p class="get-txt-color">Divine is committed to providing you with the highest quality service. If you have any questions, please contact us via Mail/ Phone/Fax/Email given below and we will respond to your question, suggestion or request, as quickly as possible:</p>
           </div>
         </div>
     </div>
@@ -340,19 +340,19 @@
       <div class="col-lg-8">
         <form action="#" class="row g-3">
           <div class="form-group col-lg-6">
-            <input type="text" class="form-control" id="validationCustom01" placeholder="Enter first name"  value="" required>
+            <input type="text" class="form-control" id="validationCustom01" placeholder="First Name"  value="" required>
           </div>
           <div class="form-group col-lg-6">
-            <input type="text" class="form-control" id="validationCustom02" placeholder="Enter Second name"  value="" required>
+            <input type="text" class="form-control" id="validationCustom02" placeholder="Last Name"  value="" required>
           </div>
           <div class="form-group col-lg-6">
-            <input type="email" class="form-control" id="validationCustom03" placeholder="Enter email id">
+            <input type="email" class="form-control" id="validationCustom03" placeholder="Email Address">
           </div>
           <div class="form-group col-lg-6">
-            <input type="text" class="form-control" id="validationCustom04" placeholder="Enter Phone number">
+            <input type="text" class="form-control" id="validationCustom04" placeholder="Phone Number">
           </div>
           <div class="form-group col-lg-12">
-            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+            <textarea class="form-control" placeholder="Message" id="floatingTextarea2" style="height: 100px"></textarea>
           </div>
           <div class="form-group col-lg-12 d-grid">
             <button class="btn btn-brand">Send Message</button>
@@ -370,7 +370,7 @@
                 <div class="col-lg-6 col-sm-6">
                     <div class="position-relative" >
                       <a href="#"><img src="./assets/Img/logo1-white.png" alt="" style="width: 200px;"></a>
-                      <p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, hic!</p>
+                      <p class="mt-3 fl-us-txt">FOLLOW US</p>
                     </div>
                     <div class="social-icons">
                         <a href="#"><i class="ri-twitter-fill"></i></a>
