--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             <img  src="https://images.pexels.com/photos/2599244/pexels-photo-2599244.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100 car-img" alt="...">
             <div class="carousel-caption d-md-block">
               <h5 class="display-5  text-white fw-bold">Enriched IT solutions</h5>
-              <p class="display-7 ">Make your business foundation stronger with our expert IT team.</p>
+              <p class="display-7 ">Make your business foundation stronger with our expert IT 
+                  .</p>
             </div>
           </div>
           <div class="carousel-item carousel-txt">
@@ -112,7 +113,7 @@
       </div>
       <div class="row justify-content-between align-items-center">
         <div class="col-lg-6" data-aos="fade-down" data-aos-delay="50">
-          <img class="w-100 about-photo" src="../design/assets/Img/team-profile.jpeg" alt="">
+          <img class="w-100 about-photo" src="./assets/Img/team-profile.jpeg" alt="">
         </div>
         <div class="col-lg-5" data-aos="fade-left" data-aos-delay="50">
           <h1 class="mt-5 mt-lg-0 text-center text-lg-start text-md-start">Tech Dynamics</h1>
