--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
               <a class="nav-link " aria-current="page" href="#services">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="#faq">FAQ</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link " aria-current="page" href="#contact">Contact</a>
             </li>
           </ul>
@@ -66,8 +63,7 @@
             <img  src="https://images.pexels.com/photos/2599244/pexels-photo-2599244.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100 car-img" alt="...">
             <div class="carousel-caption d-md-block">
               <h5 class="display-5  text-white fw-bold">Enriched IT solutions</h5>
-              <p class="display-7 ">Make your business foundation stronger with our expert IT 
-                  .</p>
+              <p class="display-7 ">Make your business foundation stronger with our expert IT team.</p>
             </div>
           </div>
           <div class="carousel-item carousel-txt">
@@ -113,7 +109,7 @@
       </div>
       <div class="row justify-content-between align-items-center">
         <div class="col-lg-6" data-aos="fade-down" data-aos-delay="50">
-          <img class="w-100 about-photo" src="./assets/Img/team-profile.jpeg" alt="">
+          <img class="w-100 about-photo" src="../design/assets/Img/team-profile.jpeg" alt="">
         </div>
         <div class="col-lg-5" data-aos="fade-left" data-aos-delay="50">
           <h1 class="mt-5 mt-lg-0 text-center text-lg-start text-md-start">Tech Dynamics</h1>
@@ -221,109 +217,7 @@
     </div>
   </section>
 
-  <!-- FAQ -->
-  <section id="faq" class="section-padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-12 text-center" data-aos="fade-down" data-aos-delay="50">
-          <div class="section-title">
-            <h1 class="fw-semibold display-4">Tech Dynamics FAQ</h1>
-            <div class="line"></div>
-            <p>Review its performance and impact</p>
-          </div>
-        </div>
-      </div>
-      <div class="faq-box">
-        <div class="row align-items-center">
-          <div class="col-md-12 my-2">
-            <div class="d-flex gap-3 text-center align-items-center justify-content-between">
-              <h4 class="text-start text-primary fs-3 fw-light">Can I get a free trial before I purchase?</h4>
-              <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
-                <i class="ri-arrow-down-s-line "></i>
-              </a>
-            </div>
-            <div class="row pt-3">
-              <div class="col">
-                <div class="collapse multi-collapse" id="multiCollapseExample1">
-                  <div class="card card-body ">
-                   <p class="fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-12 my-2">
-            <div class="d-flex text-center align-items-center justify-content-between">
-              <h4 class="text-start text-primary fs-3 fw-light">Will membership plans be charged automatically?</h4>
-              <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#multiCollapseExample2" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
-                <i class="ri-arrow-down-s-line "></i>
-              </a>
-            </div>
-            <div class="row pt-3">
-              <div class="col">
-                <div class="collapse multi-collapse" id="multiCollapseExample2">
-                  <div class="card card-body ">
-                   <p class="fs-5"> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-12 my-2">
-            <div class="d-flex gap-3 text-center align-items-center justify-content-between">
-              <h4 class="text-start text-primary fs-3 fw-light">What Is a Product Key</h4>
-              <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#multiCollapseExample3" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
-                <i class="ri-arrow-down-s-line "></i>
-              </a>
-            </div>
-            <div class="row pt-3">
-              <div class="col">
-                <div class="collapse multi-collapse" id="multiCollapseExample3">
-                  <div class="card card-body ">
-                   <p class="fs-5">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-12 my-2">
-            <div class="d-flex text-center align-items-center justify-content-between">
-              <h4 class="text-start text-primary fs-3 fw-light">How long does It take to download?</h4>
-              <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#multiCollapseExample4" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
-                <i class="ri-arrow-down-s-line "></i>
-              </a>
-            </div>
-            <div class="row pt-3">
-              <div class="col">
-                <div class="collapse multi-collapse" id="multiCollapseExample4">
-                  <div class="card card-body ">
-                   <p class="fs-5"> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-12 my-2">
-            <div class="d-flex text-center align-items-center justify-content-between">
-              <h4 class="text-start text-primary fs-3 fw-light">Where do I download the file to</h4>
-              <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#multiCollapseExample5" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">
-                <i class="ri-arrow-down-s-line "></i>
-              </a>
-            </div>
-            <div class="row pt-3">
-              <div class="col">
-                <div class="collapse multi-collapse" id="multiCollapseExample5">
-                  <div class="card card-body ">
-                   <p class="fs-5"> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+ 
  
   <!-- CONTACT -->
   <section id="contact" class="section-padding contact-bg">
