--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
       <div class="row justify-content-between align-items-center">
         <div class="col-lg-6" data-aos="fade-down" data-aos-delay="50">
-          <img class="w-100 about-photo" src="../design/assets/Img/team-profile.jpeg" alt="">
+          <img class="w-100 about-photo" src="./assets/Img/team-profile.jpeg" alt="">
         </div>
         <div class="col-lg-5" data-aos="fade-left" data-aos-delay="50">
           <h1 class="mt-5 mt-lg-0 text-center text-lg-start text-md-start">Tech Dynamics</h1>
