--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
               <i class="ri-smartphone-line"></i>
             </div>
             <h5 class="mt-4 mb-2">Mobile Application Developement</h5>
-            <p>Divine It Services offer a round trip of mobile application’s design, integration, and management services as a solution. </p>
+            <p>Tech Dynamics It Services offer a round trip of mobile application’s design, integration, and management services as a solution. </p>
           </div>
         </div>
         <div class="col-lg-4 col-sm-6">
@@ -227,7 +227,7 @@
           <div class="section-title">
             <h1 class="fw-semibold  display-4">Get in touch</h1>
             <div class="line"></div>
-            <p class="get-txt-color">Divine is committed to providing you with the highest quality service. If you have any questions, please contact us via Mail/ Phone/Fax/Email given below and we will respond to your question, suggestion or request, as quickly as possible:</p>
+            <p class="get-txt-color">Tech Dynamics is committed to providing you with the highest quality service. If you have any questions, please contact us via Mail/ Phone/Fax/Email given below and we will respond to your question, suggestion or request, as quickly as possible:</p>
           </div>
         </div>
     </div>
